examples/test/testpolicy10133.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10133
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key48: value0
      key13: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value15
          key49: value44
      podSelector:
        matchLabels:
          key42: value21
          key5: value46
          key15: value11
